gost_magma/PYNQ_HLS/magma/csim/report/magma_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../test.cpp in debug mode
csim.mk:72: recipe for target 'obj/test.o' failed
../../../test.cpp: In function 'int main(int, char**)':
../../../test.cpp:70:40: error: 'printf' was not declared in this scope
         printf("Imitta test failed\r\n");
                                        ^
../../../test.cpp:73:40: error: 'printf' was not declared in this scope
         printf("Imitta test passed\r\n");
                                        ^
../../../test.cpp:81:32: error: 'printf' was not declared in this scope
       printf("%hhx ", Data_E[i]);
                                ^
../../../test.cpp:82:17: error: 'printf' was not declared in this scope
      printf("\n");
                 ^
../../../test.cpp:86:63: error: 'printf' was not declared in this scope
         printf("Simple replacement encryption test passed\r\n");
                                                               ^
../../../test.cpp:91:63: error: 'printf' was not declared in this scope
         printf("Simple replacement decryption test failed\r\n");
                                                               ^
../../../test.cpp:94:51: error: 'printf' was not declared in this scope
         printf("Simple decryption test passed\r\n");
                                                   ^
../../../test.cpp:103:50: error: 'printf' was not declared in this scope
         printf("Gamma encryption test failed\r\n");
                                                  ^
../../../test.cpp:106:50: error: 'printf' was not declared in this scope
         printf("Gamma encryption test passed\r\n");
                                                  ^
../../../test.cpp:114:50: error: 'printf' was not declared in this scope
         printf("Gamma decryption test failed\r\n");
                                                  ^
../../../test.cpp:117:50: error: 'printf' was not declared in this scope
         printf("Gamma decryption test passed\r\n");
                                                  ^
../../../test.cpp:128:64: error: 'printf' was not declared in this scope
         printf("Gamma with feedback encryption test failed\r\n");
                                                                ^
../../../test.cpp:131:63: error: 'printf' was not declared in this scope
        printf("Gamma with feedback encryption test passed\r\n");
                                                               ^
../../../test.cpp:140:64: error: 'printf' was not declared in this scope
         printf("Gamma with feedback decryption test failed\r\n");
                                                                ^
../../../test.cpp:143:63: error: 'printf' was not declared in this scope
        printf("Gamma with feedback decryption test passed\r\n");
                                                               ^
make: *** [obj/test.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
